# vechnost

./: .cursorrules  .gitignore  CHECK_USER_1115719673.md  CODE_REVIEW.md  CODE_REVIEW_CERTIFICATES.md  COMPREHENSIVE_CODEBASE_REVIEW.md  CURL_EXAMPLES.md  DEPLOY_CHECKLIST.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  MIGRATION_GUIDE.md  PAYMENT_API_EXAMPLES.md  PAYMENT_BUGFIXES.md  PAYMENT_INTEGRATION_GUIDE.md  PAYMENT_QUICKSTART.md  PAYMENT_SIMPLIFICATION.md  PAYMENT_SUMMARY.md  PAYMENT_TROUBLESHOOTING.md  PAYMENT_UPDATES.md  PROJECT_SUMMARY.md  Procfile  QUICKSTART.md  QUICK_START_TRIBUTE.md  RAILWAY_DEPLOYMENT.md  README.md  REDIS_AUTO_START.md  TESTING_GUIDE.md  TEST_ACCESS.md  TRIBUTE_SETUP_GUIDE.md  URGENT_FIX.md  activate_user.py  alembic.ini  check_payment_settings.py  check_user_payment.py  deploy.ps1  deploy.sh  docker-compose.yml  env.example  pyproject.toml  (+12 more)
alembic/: env.py
app/: __init__.py  config.py
assets/: backgrounds.yml
content/: cs.yml  en.yml  ru.yml
data/: questions.yaml  questions_cs.yaml  questions_en.yaml  translations_cs.yaml  translations_en.yaml  translations_ru.yaml
docs/: ACTIVATE_NOW.md  ACTIVATE_USER_GUIDE.md  ADMIN_SCRIPTS.md  CERTIFICATES_PRODUCTION_SETUP.md  CHECK_USER_GUIDE.md  DEPLOY_CHECKLIST.md  DOCKERFILE_REVIEW.md  DOCKER_FIXED.md  ENVIRONMENT_VARIABLES.md  IMPLEMENTATION_SUMMARY.md  LIFETIME_SUBSCRIPTIONS.md  MIGRATION_QUICK_START.md  NEW_WELCOME_SCREEN.md  PAYMENT_ACCESS_LOGIC.md  PAYMENT_LINK_FIX.md  PAYMENT_SETUP_GUIDE.md  PAYMENT_TROUBLESHOOTING.md  PAYMENT_UPDATE_GUIDE.md  POSTGRESQL_MIGRATION.md  QUICK_DEBUG_COMMANDS.md  QUICK_FIX_GUIDE.md  RAILWAY_SETUP_QUICK.md  RAILWAY_WEBHOOK_SETUP.md  README.md  REDIS_RAILWAY_SETUP.md  SuggestedFeatures.md  TRIBUTE_INTEGRATION_COMPLETE.md  WEBHOOK_TESTING.md  WEBHOOK_TESTING_SUMMARY.md  WEBHOOK_TEST_RESULTS.md
locales/: cs.yml  en.yml  ru.yml
scripts/: README.md  activate_simple.py  add_certificates_to_production.py  check_local_db.py  check_railway_db.py  check_user_simple.py  generate_certificates.py  list_users.py  migrate_to_lifetime.py  quick_test_webhook.py  start_services.py  start_webhook_server.py  test_all_webhooks.py  test_webhook.py  translate_content.py
sql/: README.md  activate_via_sql.sql  update_to_lifetime.sql
tests/: __init__.py  conftest.py  test_bot.py  test_main.py  (+20 more)
(+60 files in other folders)
